little fix in page 404 added z-index -1 cuz headeroptions was not visible

--- a/src/pages/Page404/myComponents/Space/styles.module.scss
+++ b/src/pages/Page404/myComponents/Space/styles.module.scss
@@ -1,6 +1,8 @@
 .space {
     flex: 1;
     overflow: hidden;
+    
+    z-index: -1;
 
     & > div {
         width: 100%;
